# Phi-Onnx

./: LICENSE  README.md
examples/: __readme__.txt
examples/Python/: model-qa.py  phi3-Esperanto.py
examples/Ryzen/C/: CMakeLists.txt  run_llm.cpp  sample.cpp  sample.txt
examples/Ryzen/C/include/: __readme__.txt  ort_genai.h  ort_genai_c.h
examples/Ryzen/C/lib/: __readme__.txt  onnx_custom_ops.dll.txt  onnxruntime-genai.lib
examples/Ryzen/C/util/: getopt.c  getopt.h  prompt_reader.h
examples/Ryzen/Python/: sample.txt
examples/c/: CMakeLists.txt  CMakeLists.txt.dml  README.md  __readme__.txt  cpf_2_Phi-3.txt
examples/c/include/: ort_genai.h
examples/c/lib/: onnxruntime-genai.lib
examples/c/prompts/: cpf_2_Phi-3-no_just.txt  cpf_Phi-3.txt  long_prompt_1.txt  long_prompt_2.txt
examples/c/src/: cpf.cpp  cpf_v2.1.cpp  cpf_v2.cpp  main.cpp  main.dml.cpp  phi3.cpp
examples/cpp/Phi/: CMakeLists.txt  __readme__.txt
examples/cpp/Phi/src/: cpf_v2.cpp  phi3.cpp
examples/cpp/include/: __readme__.txt  onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h
examples/cpp/lib/: __readme__.txt  onnxruntime-genai.lib
examples/cpp/slm_engine/: __readme__.txt
examples/cpp/slm_engine/src/: CMakeLists.txt  __readme__.txt
examples/cpp/slm_engine/src/cpp/: slm_engine.h
